--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Shafi Ul Islam<jonyszone@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -20,7 +21,8 @@
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "three": "^0.147.0"
   },
   "devDependencies": {
     "eslint": "^8.29.0",
